# FitFinder

./: .dockerignore  .gitignore  AUTH_SETUP.md  CLEANUP_SUMMARY.md  Dockerfile  README.md  chainlit-start.sh  check_network.py  docker-compose.yml  env.example  package.json  pyproject.toml  pytest.ini  railway.toml  render.yaml  start_backend_network.py  start_fitfinder.py  start_fitfinder_chainlit.py  test_backend.py  test_server.py
backend/: README.md  chainlit_app.py  config.py  core.py  main.py  pyproject.toml  requirements.txt
backend/agent/: agent_core.py  clothing_agent.py  formatters.py  langgraph_agent.py  orchestrator.py  outfit_agent.py  schemas.py  steps.py  utils.py
backend/agent/tools/: __init__.py  caption_image.py  create_clothing_item.py  create_outfit.py  get_clothing_item.py  get_clothing_items.py  get_outfit.py  image_captioner.py  image_storage.py  outfit_searcher.py  outfit_specific_tools.py  outfit_tools_stubs.py  test_outfit_searcher.py  web_searcher.py
backend/auth/: __init__.py  chainlit_auth.py  user_manager.py
backend/db/: crud.py  models.py  utils.py  vector_store.py
backend/services/: embedding_service.py  storage_service.py
backend/tests/: test_agent_core.py  test_caption_image.py  test_chainlit_file_handling.py  test_create_clothing_item_tool.py  test_end_to_end_image_workflow.py  test_image_storage.py  test_integration_workflow.py  test_main.py  test_outfit_searcher.py  test_outfit_specific_tools.py  test_steps.py
chroma_db/: chroma.sqlite3
docs/: agent_refactoring_plan.md  architecture_overview.md  langgraph_structure.md  outfit_agent_design.md
frontend/: .env.capacitor  .env.production  README.md  capacitor.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx  viewport.ts
frontend/app/api/chat/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/chat/: page.tsx  route.ts
frontend/app/upload/: page.tsx
frontend/components/: BackgroundConfetti.tsx  Chat.tsx  ChatBubble.tsx  FitFinderHeader.tsx  MessageInput.tsx  QueryProvider.tsx  UploadForm.tsx  WardrobeIllustrations.tsx  index.ts
frontend/lib/: api.ts
frontend/pages/: _app.tsx  index.tsx  upload.tsx
frontend/public/: index.html  manifest.json
frontend/services/: api.ts
frontend/styles/: globals.css
