[tool.poetry]
name = "fitfinder-backend"
version = "0.1.0"
description = "Backend for FitFinder"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9,<3.14"
chromadb = "^1.0.7"
filetype = "^1.2.0"
langchain = "^0.3.24"
langchain-anthropic = "^0.3.12"
langfuse = "^2.60.5"
langgraph = "^0.4.1"
pillow = "^11.2.1"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
torch = "^2.7.0"
transformers = "^4.51.3"
chainlit = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.main:app"
